# ICRA2020_RM_IHiter_Perception

./: Readme.md
Armor_Detector/: CMakeLists.txt  armor_detect.cpp  armor_detect.h  camera.cpp  camera.h  enemy.cpp  enemy.h  lightbar.cpp  lightbar.h  main.cpp  optimize.cpp  optimize.h  predict.cpp  predict.h
Armor_Detector/SIGN/: CMakeLists.txt  main.cpp
Armor_Detector/SIGN/DNEGTIVE/: config.txt
Armor_Detector/SIGN/DPOSITIVE/: config.txt
Armor_Detector/SIGN/N/: config.txt
Armor_Detector/SIGN/NEGTIVE/: config.txt
Armor_Detector/SIGN/NEGTIVE_LIGHT/: config.txt
Armor_Detector/SIGN/P/: config.txt
Armor_Detector/SIGN/POSITIVE/: config.txt
Armor_Detector/SIGN/POSITIVE_LIGHT/: config.txt
Armor_Detector/SIGN/WNEGTIVE/: config.txt
Armor_Detector/SIGN/WPOSITIVE/: config.txt
Armor_Detector/SIGN/diuqi/NEGTIVE/: config.txt
Armor_Detector/SIGN/diuqi/POSITIVE/: config.txt
Armor_Detector/output/: path.txt  pathop.txt  pdfcenter.txt
RobDet/: README.md  demo.py  generate_ab_kmeans.py  tools.py  train.py
RobDet/backbone/: __init__.py  darknet.py
RobDet/backbone/weights/: README.md
RobDet/data/: __init__.py  config.py  rm.py
RobDet/models/: slim_yolo_v2.py  tiny_yolo_v3.py
RobDet/utils/: __init__.py  com_paras_flops.py  modules.py
RobDet/weights/rm/: README.md
